--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     },
     "dependencies": {
         "bootstrap-vue": "^2.1.0",
+        "font-awesome": "^4.7.0",
         "vue-router": "^3.1.3",
         "vuex": "^3.1.2"
     }
